--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 height: 100%;
             }
         </style>
-        <script src="js/main.js"></script>
+        <script src="js//main.js"></script>
         <script>
           // VConsole 默认会挂载到 `window.VConsole` 上
           var vConsole = new window.VConsole();
