--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 height: 100%;
             }
         </style>
-        <script src="js//main.js"></script>
+        <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
         <script>
           // VConsole 默认会挂载到 `window.VConsole` 上
           var vConsole = new window.VConsole();
@@ -21,6 +21,6 @@
         </script>
     </head>
     <body>
-        <script type="text/javascript" src="js/Main.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
