--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         </script>
     </head>
     <body>
-        <script type="text/javascript" src="js/Main.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
