--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>祝各位新年快乐,龙年大吉(屏幕可点)</title>
+        <title>祝各位新年快乐,蛇年大吉(屏幕可点)</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
